fixing phone spacing

--- a/css/main.css
+++ b/css/main.css
@@ -232,7 +232,7 @@ footer span {
 	.portfolio-item {
 		width:100%;
 		float:left;
-		margin:0 0 10px 0;
+		margin:0 0 30px 0;
 		height:inherit;
 	}
 }
